Alignment Fixes

--- a/style/cardpage.css
+++ b/style/cardpage.css
@@ -43,11 +43,10 @@
         width: 100%;
         padding: 0px 5%;
         margin-bottom: 5%;
-        text-align: justify;
     }
 }
 
-@media screen and (min-width: 501px) and (max-width: 799px) {
+@media screen and (min-width: 501px) and (max-width: 999px) {
     .card-container {
         background-image: linear-gradient(to right bottom, #f2f2f280, #f2f2f21a);
         border-radius: 20px 20px 0px 0px;
@@ -91,11 +90,10 @@
     .onerow {
         width: 100%;
         padding: 0px 5%;
-        text-align: justify;
     }
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 1000px) {
     main {
         display: grid;
         grid-template-columns: 50% 50%;
@@ -146,7 +144,6 @@
     .onerow {
         width: 100%;
         padding: 0px 5%;
-        text-align: justify;
     }
 }
 
@@ -166,7 +163,6 @@
     padding: 2% 0% 2% 0px;
     background-color: #e9e9e9;
     border-radius: 10px;
-    text-align: justify;
     margin-bottom: 6%;
 }
 
@@ -175,7 +171,6 @@
     flex-wrap: wrap;
     background-color: #000000;
     border-radius: 10px;
-    text-align: justify;
     padding: 0px 0px 5% 0px;
 }
 
